fix missing border

--- a/lab3/css/style.css
+++ b/lab3/css/style.css
@@ -13,11 +13,11 @@ body {
     position: fixed;
     top: 0;
     left: 0;
+    background-color: aquamarine;
     border: 1px solid black;
     height: 50px;
-    width: 100%;
+    width: 99.8%;
     justify-content: space-between;
-    background-color: aquamarine;
     z-index: 1;
 }
 
